--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,66 +12,76 @@ environment:
 
 dependencies:
   app_links: ^3.5.0
-  audio_service: ^0.18.12
+  audio_service: ^0.18.15
   audiotagger:
     git:
-      url: https://github.com/Sangwan5688/Audiotagger
-      ref: 90f2db5
+      url: https://github.com/sudesh-bhatt/Audiotagger.git
+      ref: master
   # bitsdojo_window: ^0.1.1+1 #For Desktops
-  cached_network_image: ^3.3.0
-  carousel_slider: ^4.2.1
-  connectivity_plus: ^5.0.2
-  cupertino_icons: ^1.0.6
+  cached_network_image: ^3.4.1
+  carousel_slider: ^5.0.0
+  connectivity_plus: ^6.1.0
+  cupertino_icons: ^1.0.8
   dart_des: ^1.0.2
-  device_info_plus: ^9.1.1
+  device_info_plus: ^11.1.1
   # ffmpeg_kit_flutter_audio: ^6.0.3
-  file_picker: ^6.1.1
+  file_picker: ^8.1.4
   flip_card: ^0.7.0
   flutter:
     sdk: flutter
-  flutter_archive: ^6.0.0
+  flutter_archive: ^6.0.3
   flutter_displaymode: ^0.6.0
   # flutter_downloader: ^1.7.1
   flutter_localizations:
     sdk: flutter
   flutter_lyric: ^2.0.4+6
-  get_it: ^7.6.4
+  get_it: ^7.7.0
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   # home_widget: ^0.3.0
   html_unescape: ^2.0.0
-  just_audio: ^0.9.36
+  just_audio: ^0.9.42
   # Discontinued, Use just_audio_windows instead.
   # For Linux use just_audio_mpv.
   # just_audio_libwinmedia: ^0.0.4 # For windows and linux.
-  logging: ^1.2.0
+  logging: ^1.3.0
   marquee: ^2.2.3
-  material_design_icons_flutter: 5.0.5955-rc.1
-  metadata_god: ^0.5.2+1
-  on_audio_query: ^2.9.0
-  package_info_plus: ^5.0.1
-  palette_generator: ^0.3.3+3
-  path_provider: ^2.1.1
-  permission_handler: ^11.1.0
-  persistent_bottom_nav_bar:
+  material_design_icons_flutter: ^7.0.7296
+  metadata_god: ^1.0.0
+#  on_audio_query: ^2.9.0
+  on_audio_query_forked: ^2.9.1
+  package_info_plus: ^8.1.1
+  palette_generator: ^0.3.3+5
+  path_provider: ^2.1.5
+  permission_handler: ^11.3.1
+  persistent_bottom_nav_bar_v2: ^5.3.1
+  #  persistent_bottom_nav_bar:
+  #    git:
+  #      url: https://github.com/Sangwan5688/PersistentBottomNavBar
+  #      ref: ecdadb0
+  receive_sharing_intent:
     git:
-      url: https://github.com/Sangwan5688/PersistentBottomNavBar
-      ref: ecdadb0
-  receive_sharing_intent: ^1.4.5
-  share_plus: ^7.2.1
-  sizer: ^2.0.15
-  sliding_up_panel: ^2.0.0+1
-  url_launcher: ^6.2.2
-  uuid: ^3.0.7
-  # workmanager: ^0.5.1
-  youtube_explode_dart: ^2.0.4
+     url: https://github.com/KasemJaffer/receive_sharing_intent
+     ref: master
 
+  share_plus: ^10.1.2
+  sizer: ^3.0.5
+  sliding_up_panel: ^2.0.0+1
+  url_launcher: ^6.3.1
+  uuid: ^4.5.1
+  # workmanager: ^0.5.1
+  youtube_explode_dart: ^2.3.6
+
+  http: any
+  rxdart: any
+  audio_session: any
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  lint: ^2.1.2
-  msix: ^3.16.4
-
+  lint: ^2.3.0
+  msix: ^3.16.8
+  build_runner: ^2.4.13
+  flutter_gen_runner:
 flutter:
   uses-material-design: true
 
